# vocab-tester

./: .better-commits.json  .coveragerc  .docstr.yaml  .git_archival.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  .sourcery.yaml  LICENSE  Pipfile  README.md  __main__.py  _typos.toml  build.py  cosmic-ray.toml  main.py  mypy.ini  poe_tasks.toml  pydoclint.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  tox.ini
.github/: dependabot.yml  renovate.json  revonate.json
.github/workflows/: check.yml  coverage.yml  interrogate.yml
accido/: edge_cases.py  endings.py  misc.py
docs/: README.md  pydoclint-baseline.txt
docs/dev/: README.rst  transfero.rst
grammatica/: custom_exceptions.py  edge_cases.py  endings.py  misc.py  reader.py
lists/: test.txt
mypy_stubs/: ruff.toml
mypy_stubs/dill/: __diff.pyi  __info__.pyi  __init__.pyi  _dill.pyi  _objects.pyi  _shims.pyi  allowlist  detect.pyi  logger.pyi  pointers.pyi  session.pyi  settings.pyi  source.pyi  temp.pyi
mypy_stubs/fsrs/: __init__.pyi  fsrs.pyi  models.pyi
mypy_stubs/lemminflect/: __init__.pyi  allowlist  config.pyi
mypy_stubs/nltk/: __init__.pyi  allowlist  data.pyi  decorators.pyi  downloader.pyi  internals.pyi  jsontags.pyi  lazyimport.pyi  tgrep.pyi  treeprettyprinter.pyi  treetransforms.pyi  wsd.pyi
python_src/: __coconut__.py  __init__.coco  __init__.py  utils.coco  utils.py  utils_latest.py
python_src/accido/: __init__.coco  __init__.py  class_adjective.coco  class_adjective.py  class_noun.coco  class_noun.py  class_pronoun.coco  class_pronoun.py  class_regularword.coco  class_regularword.py  class_verb.coco  class_verb.py  class_word.coco  class_word.py  custom_exceptions.py  edge_cases.coco  edge_cases.py  ending_tables.py  endings.coco  endings.py  exceptions.coco  exceptions.py  misc.coco  misc.py  type_aliases.coco  type_aliases.py  type_aliases_latest.py  type_hints.py
python_src/lego/: __init__.coco  __init__.py  cache.coco  cache.py  custom_exceptions.py  exceptions.coco  exceptions.py  key.cpp  misc.coco  misc.py  obfuscate.h  reader.coco  reader.py  reader_latest.py  saver.coco  saver.py
python_src/rogo/: __init__.py  asker.py  exceptions.py  question_classes.py  rules.py  type_aliases.py
python_src/transfero/: __init__.coco  __init__.py  adj_to_adv.coco  adj_to_adv.py  adjective_inflection.coco  adjective_inflection.py  adverb_inflection.coco  adverb_inflection.py  edge_cases.coco  edge_cases.py  exceptions.coco  exceptions.py  noun_inflection.coco  noun_inflection.py  pronoun_inflection.py  synonyms.py  verb_inflection.coco  verb_inflection.py  words.coco  words.py
python_src/utils/: __init__.py  compare.py  duplicates.py  set_functions.py
scripts/: badges.sh  coverage.sh  requirements.sh  tests.sh
src/: __init__.py
src/_vendor/: __init__.py
src/accido/: __init__.py  custom_exceptions.py  edge_cases.py  endings.py  misc.py
src/core/: __init__.py
src/lego/: __init__.py  reader.py
src/utils/: __init__.py  compact.py  duplicates.py
stubs/dill/: __init__.pyi  _objects.pyi  detect.pyi  logger.pyi  objtypes.pyi  session.pyi  settings.pyi
stubs/lemminflect/: __init__.pyi
stubs/nltk/: allowlist  book.pyi  collocations.pyi  compat.pyi  featstruct.pyi  grammar.pyi  help.pyi  langnames.pyi  probability.pyi  tabdata.pyi  text.pyi  toolbox.pyi  util.pyi
tests/: conftest.py  ruff.toml  run_all_tests.py  run_all_timing.py  test_adjective.py  test_basicword.py  test_irregularverb.py  test_multipleendings.py  test_noun.py  test_pronoun.py  test_reader.py  test_regular.py  test_saver.py  test_verb.py
tests/python_src.accido/: accido_timing_data.txt  (+14 more)
(+450 files in other folders)
