[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core", "setuptools" ]

[tool.poetry]
name = "vocab-tester"
version = "0.4-dev"
description = "An application that tests Latin vocabulary and grammar."
authors = [ "rduo1009 <robertduong09alt@gmail.com>" ]
readme = "README.md"
packages = [ { include = "python_src" } ]
include = [ "nltk_data/**/*.zip", "python_src/lego/libkey.so" ]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
dill = "==0.3.9"
fsrs = "==2.5.1"
nltk = "==3.9.1"
lemminflect = "==0.2.3"
inflect = "==7.4.0"
lz4 = "==4.3.3"
setuptools = "==75.2.0"

[tool.poetry.group.dev.dependencies]
icecream = "==2.1.3"
mypy = { version = "==1.13.0", extras = [ "faster-cache" ] }
ruff = "==0.7.3"
pytest = "==8.3.3"
monkeytype = "==23.3.0"
coverage = "==7.6.4"
pytest-cov = "==6.0.0"
pytest-sugar = "==1.0.0"
codetiming = "==1.4.0"
pytest-xdist = "==3.6.1"
pytest-testmon = "==2.1.1"
pytest-watch = "==4.2.0"
deptry = "==0.20.0"
cosmic-ray = "==8.3.15"
doc8 = "==1.1.2"
rstfmt = "==0.0.14"
interrogate = { extras = [ "png" ], version = "==1.7.0" }
pydoclint = "==0.5.9"

[tool.poetry.group.types.dependencies]
types-regex = "==2024.9.11.20240912"
types-setuptools = "==75.3.0.20241107"
optype = "==0.6.1"
