[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0" ]

[tool.poetry]
name = "vocab-tester"
version = "0.0.0"                                                       # placeholder
description = "An application that tests Latin vocabulary and grammar."
authors = [ "rduo1009 <robertduong09alt@gmail.com>" ]
readme = "README.md"
packages = [ { include = "src" } ]
include = [ "nltk_data/**/*.zip" ]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
dill = "0.3.9"
nltk = "3.9.1"
lemminflect = "0.2.3"
inflect = "7.4.0"
lz4 = "4.3.3"
dunamai = "1.23.0"

[tool.poetry.group.dev.dependencies]
icecream = "2.1.3"
mypy = { version = "1.13.0", extras = [ "faster-cache" ] }
ruff = "0.8.0"
pytest = "8.3.3"
monkeytype = "23.3.0"
coverage = "7.6.8"
pytest-cov = "6.0.0"
pytest-sugar = "1.0.0"
codetiming = "1.4.0"
pytest-xdist = "3.6.1"
pytest-testmon = "2.1.1"
pytest-watch = "4.2.0"
deptry = "0.21.1"
cosmic-ray = "8.4.1"
doc8 = "1.1.2"
rstfmt = "0.0.14"
interrogate = "1.7.0"
pydoclint = "0.5.9"

[tool.poetry.group.types.dependencies]
types-regex = "2024.11.6.20241108"
optype = "0.7.1"

[tool.poetry-dynamic-versioning]
enable = true
